# Shim-Pass

./: .gitignore
shim-backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  render.yaml  schemas.py  utils.py
shim-backend/routers/: admin.py  extension.py  payments.py
shim-frontend/: package-lock.json  package.json
shim-frontend/src/: middleware.ts
shim-frontend/src/app/: globals.css  layout.tsx  page.tsx
shim-frontend/src/app/admin/: page.tsx
shim-frontend/src/app/api/payments/upload/: route.ts
shim-frontend/src/app/api/send-email/: route.ts
shim-frontend/src/app/api/user/history/: route.ts
shim-frontend/src/app/api/user/licenses/: route.ts
shim-frontend/src/app/api/user/unbind/: route.ts
shim-frontend/src/app/dashboard/: page.tsx
shim-frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
shim-frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
shim-frontend/src/components/: ShimLogo.tsx
