[project]
name = "shim-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.44.2",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "mailtrap>=2.6.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
